[tool.poetry]
name = "rei"
version = "0.4.1"
description = ""
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.14.0"
core = { git = "https://github.com/unicheckbot/core.git", branch = "main" }
icmplib = "^3.0"
mcstatus = "^11.1.1"
python-a2s = "^1.3.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.mypy]
python_version = "3.9"
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

